--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,9 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+ 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+ 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <uses-sdk android:minSdkVersion="15" />
 
     <application
