--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,20 +4,25 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
- 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
- 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
+    </uses-permission>
+
     <uses-sdk android:minSdkVersion="15" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/MyTheme">
-        <uses-library android:name="com.google.android.maps"/>
+        android:theme="@style/MyTheme" >
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
-            android:name=".MyMapViewActivity"
+            android:name="org.domain.mobile.android.mymapview.MyMapViewActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-	</application>
+        <activity
+            android:name="org.domain.mobile.android.mymapview.AreaDetailsEditActivity"
+            android:label="@string/title_activity_area_details_edit" >
+			
+        </activity>
+    </application>
 
 </manifest>
